# game_engine

./: ADVANCED_FEATURES.md  Cargo.toml  EDITOR_README.md  IMPLEMENTATION_PLAN.md  LICENSE  QUICKSTART.md  README.md  config.toml.example  package.json  pnpm-lock.yaml  test.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/prompts/: 高性能跨平台混合游戏引擎技术设计文档.md
.github/workflows/: benchmarks.yml  ci.yml  code-quality.yml  coverage.yml  docs.yml  performance.yml  quality.yml  release.yml
.qwen/: PROJECT_SUMMARY.md
.serena/: project.yml
.trae/documents/: Rust 跨平台 2D_3D 游戏引擎实施计划.md  rust-hybrid-2d-3d-vr-ar-mr-engine-tdd.md  实施计划：游戏引擎优化与改进.md  实现进度审查与差距改进计划.md
assets/shaders/: csm.wgsl  culling.wgsl  pbr.wgsl
benches/: comprehensive_benchmark.rs  ecs_benchmarks.rs  math_benchmarks.rs  pathfinding_benchmarks.rs  performance_bench.rs  physics_benchmarks.rs  render_benchmarks.rs  simd_bench.rs
client/: index.html
client/src/: App.tsx  index.css
docs/: AGGREGATE_BOUNDARIES_REVIEW.md  AGGREGATE_BOUNDARIES_VERIFICATION.md  BENCHMARKS.md  BEST_PRACTICES.md  BLOCKING_TODOS.md  CI_CD_SETUP.md  CLIPPY_FIXES.md  COMPILATION_ERRORS_FIX_FINAL.md  COMPILATION_ERRORS_FIX_PROGRESS.md  COMPILATION_ERRORS_FIX_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTINUOUS_IMPROVEMENT.md  COVERAGE_TARGETS.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_MAINTENANCE.md  DOCUMENTATION_PROGRESS.md  DOCUMENTATION_SESSION_SUMMARY.md  DOCUMENTATION_WARNINGS_CLASSIFICATION.md  DOC_WARNINGS_STATISTICS.md  DOMAIN_RENDER_DOCUMENTATION_COMPLETE.md  DOMAIN_RENDER_TESTS_SUMMARY.md  DOMAIN_TEST_COVERAGE_FINAL_SUMMARY.md  DOMAIN_TEST_COVERAGE_SUMMARY.md  ERROR_RECOVERY_AND_COMPENSATION_TESTS_SUMMARY.md  GPU_FRUSTUM_CULLING_ANALYSIS.md  GPU_FRUSTUM_CULLING_ENHANCEMENT_PLAN.md  GPU_FRUSTUM_CULLING_PHASE1_COMPLETION.md  GPU_FRUSTUM_CULLING_PHASE1_FINAL.md  GPU_FRUSTUM_CULLING_PHASE1_IMPLEMENTATION.md  GPU_FRUSTUM_CULLING_PHASE1_PROGRESS.md  GPU_FRUSTUM_CULLING_SUMMARY.md  GPU_INDIRECT_DRAW_IMPLEMENTATION.md  HARDWARE_CODE_SEPARATION_CLEANUP.md  HARDWARE_CODE_SEPARATION_COMPLETION.md  HARDWARE_CODE_SEPARATION_EVALUATION.md  IMPLEMENTATION_SUMMARY.md  MODULE_REORGANIZATION_EVALUATION.md  NEXT_TASKS_SUMMARY.md  OCCLUSION_CULLING_COMPLETION.md  OCCLUSION_CULLING_FINAL.md  (+44 more)
docs/adr/: 0001-use-domain-driven-design.md  0002-use-actor-model-for-concurrency.md  0003-error-handling-strategy.md  0004-use-wgpu-for-rendering.md  0005-use-bevy-ecs.md  README.md
docs/api/: QUICK_REFERENCE.md  README.md  animation.md  audio.md  core.md  editor.md  network.md  physics.md  render.md  xr.md
docs/architecture/: GPU_INDIRECT_DRAW_ARCHITECTURE.md  GPU_INDIRECT_DRAW_IMPLEMENTATION.md  cqrs_evaluation.md  ecs-design.md  event_sourcing.md  hardware_separation.md  overview.md
docs/getting-started/: first-game.md  installation.md  quick-start.md
docs/guides/: animation.md  configuration.md  physics.md  rendering.md
docs/history/: ALL_PHASES_COMPLETION.md  BLOCKING_ISSUES_FIXED.md  CLEANUP_SUMMARY.md  DEFAULT_IMPLEMENTATION_ANALYSIS.md  DEFAULT_OPTIMIZATION_PROGRESS.md  FINAL_COMPLETION_REPORT.md  FINAL_IMPLEMENTATION_STATUS.md  FINAL_PROJECT_STATUS.md  FINAL_STATUS.md  IMPLEMENTATION_PROGRESS.md  IMPROVEMENT_PROGRESS.md  IMPROVEMENT_STATUS.md  MODULE_REORGANIZATION_ASSESSMENT.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_CLIPPY_FIXES.md  PHASE3_CODE_QUALITY_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_FINAL_REPORT.md  PHASE3_FINAL_STATUS.md  PHASE3_PROGRESS.md  PHASE3_STATUS.md  PHASE4_ARCHITECTURE_REVIEW.md  PHASE4_COMPLETION.md  PHASE4_COMPREHENSIVE_REVIEW.md  PLAN_IMPLEMENTATION_STATUS.md  PROGRESS_UPDATE.md  README.md
docs/implementation/: ADAPTIVE_LOD_IMPLEMENTATION.md  CONTINUATION_SUMMARY.md  DEFAULT_IMPLEMENTATION_GUIDE.md  DEFAULT_IMPLEMENTATION_SUMMARY.md  DOC_WARNINGS_COMPLETE.md  DOC_WARNINGS_PROGRESS.md  DOC_WARNINGS_STATUS.md  IMPLEMENTATION_SUMMARY.md  (+4 more)
examples/: README.md  advanced_hardware_optimization.rs  animation.rs  complete_hardware_optimization.rs  config_system_demo.rs  fsr_integration_guide.rs  game.rs  hardware_optimization.rs  hello_world.rs  interactive_adaptive_demo.rs  multiplayer.rs  npu_upscaling_demo.rs  onnx_runtime_real_example.rs  physics.rs  rendering.rs  sdk_manager_demo.rs  simd_demo.rs
game_engine_hardware/: Cargo.toml  README.md
game_engine_hardware/src/: error.rs  lib.rs
game_engine_hardware/src/adaptive/: mod.rs
game_engine_hardware/src/capability/: evaluation.rs  mod.rs
game_engine_hardware/src/config/: auto_config.rs  mod.rs
game_engine_hardware/src/gpu/: detect.rs  mod.rs  optimization.rs  vendor_optimization.rs
game_engine_hardware/src/npu/: acceleration.rs  detect.rs  mod.rs  upscaling.rs
game_engine_hardware/src/npu/sdk/: extended.rs  manager.rs  mod.rs  onnx_runtime.rs  onnx_runtime_real.rs
game_engine_hardware/src/soc/: mod.rs  power.rs
game_engine_hardware/src/upscaling/: mod.rs  sdk.rs
game_engine_hardware/src/utils/: cache.rs  metrics.rs  mod.rs  ring_buffer.rs
game_engine_profiling/: Cargo.toml  README.md
game_engine_profiling/src/: lib.rs
game_engine_profiling/src/benchmarking/: benchmark.rs  benchmark_runner.rs  critical_path_benchmarks.rs  gpu_comparative_benchmark.rs  mod.rs  optimization_validation.rs  regression_testing.rs
game_engine_profiling/src/cicd/: cicd_manager.rs  mod.rs
game_engine_profiling/src/monitoring/: monitoring_legacy.rs  system_monitor.rs
game_engine_profiling/src/profiling/: advanced_profiler.rs  continuous_profiler.rs  profiler.rs
game_engine_profiling/src/visualization/: performance_dashboard.rs
game_engine_simd/: Cargo.toml  README.md
game_engine_simd/src/: audio.rs  cpu_detect.rs  lib.rs
game_engine_simd/src/batch/: mod.rs  particle.rs  transform.rs
game_engine_simd/src/math/: arm.rs  dispatch.rs  mod.rs  ops.rs  x86.rs
scripts/: analyze_todos.sh  check_code_quality.sh  compare_performance.rs  run_coverage.sh  setup_coverage.sh  unsafe_code_review.sh  unsafe_code_review_simple.sh
src/: lib.rs  main.rs  migration.rs
tests/: integration_test.rs
(+352 files in other folders)
