[package]
name = "game_engine_profiling"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Performance profiling and benchmarking tools for game engines"
license = "MIT OR Apache-2.0"
repository = "https://github.com/username/game_engine"
homepage = "https://github.com/username/game_engine"
documentation = "https://docs.rs/game_engine_profiling"
readme = "README.md"
keywords = ["profiling", "benchmarking", "performance", "monitoring"]
categories = ["development-tools", "profiling"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
glam = { version = "0.25", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
# 测试依赖（如果需要）

